# pyMSAviz

./: 404.html  CITATION.cff  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api-docs/msaviz/: index.html
cli-docs/pymsaviz/: index.html
color_schemes/: index.html
docs/: color_schemes.ipynb  getting_started.ipynb  index.md
docs/api-docs/: msaviz.md
docs/cli-docs/: pymsaviz.md
example/: MRGPRG.fa  api_example_run.ipynb  cli_example_run.sh
getting_started/: index.html
search/: search_index.json
src/pymsaviz/: __init__.py  msaviz.py
src/pymsaviz/config/: __init__.py  color_schemes.tsv
src/pymsaviz/config/testdata/: HIGD2A.fa
src/pymsaviz/scripts/: cli.py
tests/: conftest.py  test_msaviz.py
tests/scripts/: test_cli.py
tests/testdata/: example.faa
